2012-01-03  Takashi Kato  <ktakashi@ymail.com>

	* src/hashtable.c (equal-hash): Fixed non stop problem when given object
	contains too many shared objects.

2011-12-30  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/sagittarius/control.scm (define-with-key):
	rewrite define-with-key.

2011-12-29  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/sagittarius/reader.scm (sagittarius reader): 
	added reader macro library.

2011-11-23  Takashi Kato  <ktakashi@ymail.com>

	* src/null.stub (*.): fixed returning always 0.0.

	* boot/compiler.scm (pass1/scan-inlinable): fixed mis marking for
	constable and inlinable.

2011-11-15  Takashi Kato  <ktakashi@ymail.com>

	* src/charset.c :
	[Issue 4] Added builtin charset.

	* src/treemap.c, src/rbtree.c :
	[Issue 3] Added treemap interface and implementation.

2011-11-13  Takashi Kato  <ktakashi@ymail.com>

	* src/library.c (Sg_ImportLibraryFullSpec):
	[Issue 2] Fixed rename export.

2011-11-11  Takashi Kato  <ktakashi@ymail.com>

	* started Version 0.2.3.

	* boot/lib/scmlib.scm (er-macro-transformer): fixed compare procedure.

2011-11-10  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm (pass1/collect-inlinable!): added constable flag,
	and fixed $gset was not treated properly.
	(compile): added library constant fold.

2011-11-09  Takashi Kato  <ktakashi@ymail.com>

	* src/extlib.stub (current-directory): made it as a parameter.

	* boot/compiler.scm: added const inliner on pass2.

	* src/null.stub (make-transcoder): Fixed native EOL style problem.

	* CMakeLists.txt: Supported non Boehm GC installed platform.

2011-11-08  Takashi Kato  <ktakashi@ymail.com>

	* ext/zlib/rfc/zlib.scm (rfc zlib): (rfc zlib) library has been added.

	* src/null.stub (get-bytevector-n!): fixed invalid range check.

	* doc/rnrs/io/ports.scrbl: fixed reversed order argument list in
	call-with-port.

	* src/port.c (custom_close): fixed not calling close procedure of
	custom port when the port was closed.
